Add missing dependencies

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Joe Hand <joe@hand.email> (https://joeahand.com/)",
   "license": "MIT",
   "dependencies": {
+    "ags-walk": "^2.0.5",
+    "collect-json": "^1.0.8",
     "concat-stream": "^1.6.0",
     "debug": "^2.6.1",
     "esri-dump": "^0.3.0",
@@ -16,6 +18,7 @@
     "ndjson": "^1.5.0",
     "parallel-transform": "^1.1.0",
     "pump": "^1.0.2",
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "through2": "^2.0.3"
   }
 }
